k8s/live/live-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://bitbucket.org/rafay765/example-poc/src/master/'
    deployment.kubernetes.io/revision: '16'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"example-poc:latest","namespace":"at-rafaydev765-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"example-poc\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: example-poc
  creationTimestamp: '2023-03-02T06:50:43Z'
  generation: 17
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps/v1
      time: '2023-03-02T07:28:53Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:alpha.image.policy.openshift.io/resolve-names': {}
            'f:app.openshift.io/route-disabled': {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:labels':
                .: {}
                'f:app': {}
                'f:deployment': {}
            'f:spec':
              'f:containers':
                'k:{"name":"example-poc"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2023-03-02T07:28:53Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
      subresource: status
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2023-03-02T07:28:53Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"example-poc"}':
                  'f:image': {}
  namespace: at-rafaydev765-dev
  labels:
    app: example-poc
    app.kubernetes.io/component: example-poc
    app.kubernetes.io/instance: example-poc
    app.kubernetes.io/name: example-poc
    app.kubernetes.io/part-of: sample-app
spec:
  replicas: 0
  selector:
    matchLabels:
      app: example-poc
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: example-poc
        deployment: example-poc
    spec:
      containers:
        - name: example-poc
          image: >-
            image-registry.openshift-image-registry.svc:5000/at-rafaydev765-dev/example-poc@sha256:e771a76e25c64b2bebad998f0a5ca11d26f43f1fb5bf3135b6d29e75fd77032c
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 17
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2023-03-02T06:52:01Z'
      lastTransitionTime: '2023-03-02T06:52:01Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2023-03-02T06:52:01Z'
      lastTransitionTime: '2023-03-02T06:50:43Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "example-poc-58666c7f8f" has successfully progressed.
