k8s/live/live-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example-poc
  namespace: at-rafaydev765-dev
  creationTimestamp: '2023-03-02T06:50:43Z'
  labels:
    app: example-poc
    app.kubernetes.io/component: example-poc
    app.kubernetes.io/instance: example-poc
    app.kubernetes.io/name: example-poc
    app.kubernetes.io/part-of: sample-app
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://bitbucket.org/rafay765/example-poc/src/master/'
    openshift.io/generated-by: OpenShiftWebConsole
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2023-03-02T06:50:43Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":5000,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
spec:
  clusterIP: 172.30.30.84
  ipFamilies:
    - IPv4
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.30.84
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: example-poc
    deployment: example-poc
status:
  loadBalancer: {}
