k8s/live/live-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: example-poc
  namespace: at-rafaydev765-dev
  creationTimestamp: '2023-03-02T06:50:44Z'
  labels:
    app: example-poc
    app.kubernetes.io/component: example-poc
    app.kubernetes.io/instance: example-poc
    app.kubernetes.io/name: example-poc
    app.kubernetes.io/part-of: sample-app
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-03-02T06:50:44Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-03-02T06:50:44Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: example-poc-at-rafaydev765-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  to:
    kind: Service
    name: example-poc
    weight: 100
  port:
    targetPort: 5000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: example-poc-at-rafaydev765-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-03-02T06:50:44Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.sandbox-m2.ll9k.p1.openshiftapps.com
